some hw, gps data

--- a/source/case_study_4/HW4-1.ipynb
+++ b/source/case_study_4/HW4-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -25,6 +25,26 @@
     "correlations = pd.DataFrame.corr(whisky.iloc[:,2:14].transpose())\n",
     "correlations = np.array(correlations)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86, 86)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlations.shape"
    ]
   },
   {
@@ -42,16 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (2, 1), (2, 2), (2, 3), (2, 4), (2, 5), (3, 1), (3, 2), (3, 3), (3, 4), (3, 5), (4, 1), (4, 2), (4, 3), (4, 4), (4, 5), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5)]\n"
+     ]
+    }
+   ],
    "source": [
     "# First, we import a tool to allow text to pop up on a plot when the cursor\n",
     "# hovers over it.  Also, we import a data structure used to store arguments\n",
     "# of what to plot in Bokeh.  Finally, we will use numpy for this section as well!\n",
-    "\n",
+    "# !pip install bokeh\n",
     "from bokeh.models import HoverTool, ColumnDataSource\n",
     "\n",
     "# Let's plot a simple 5x5 grid of squares, alternating between two colors.\n",
@@ -68,27 +96,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5)\n",
+      "(1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "# The first value is the x coordinate, and the second value is the y coordinate.\n",
     "# Let's store these in separate lists.\n",
     "\n",
     "xs, ys = zip(*grid)\n",
     "print(xs)\n",
-    "print(ys)"
+    "print(ys)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2', '#de8f05', '#0173b2']\n"
+     ]
+    }
+   ],
    "source": [
     "# Now we will make a list of colors, alternating between red and blue.\n",
     "\n",
@@ -98,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -148,22 +193,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Speyside': '#0173b2',\n",
+       " 'Highlands': '#de8f05',\n",
+       " 'Lowlands': '#029e73',\n",
+       " 'Islands': '#d55e00',\n",
+       " 'Campbelltown': '#cc78bc',\n",
+       " 'Islay': '#ca9161'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cluster_colors = ['#0173b2', '#de8f05', '#029e73', '#d55e00', '#cc78bc', '#ca9161']\n",
     "regions = [\"Speyside\", \"Highlands\", \"Lowlands\", \"Islands\", \"Campbelltown\", \"Islay\"]\n",
     "\n",
-    "region_colors = ## ENTER CODE HERE! ##"
+    "region_colors = dict(zip(regions, cluster_colors))\n",
+    "region_colors"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "### Exercise 3\n",
     "\n",
     "`correlations` is a two-dimensional `np.array` with both rows and columns corresponding to distilleries and elements corresponding to the flavor correlation of each row/column pair. In this exercise, we will define a list `correlation_colors`, with `string` values corresponding to colors to be used to plot each distillery pair. Low correlations among distillery pairs will be white, high correlations will be a distinct group color if the distilleries from the same group, and gray otherwise.\n",
@@ -176,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -186,10 +249,10 @@
     "correlation_colors = []\n",
     "for i in range(len(distilleries)):\n",
     "    for j in range(len(distilleries)):\n",
-    "        if ## ENTER CODE HERE! ##                      # if low correlation,\n",
+    "        if correlations[i, j] < .7:                    # if low correlation,\n",
     "            correlation_colors.append('white')         # just use white.\n",
     "        else:                                          # otherwise,\n",
-    "            if ## ENTER CODE HERE! ##                  # if the groups match,\n",
+    "            if whisky['Group'][i] == whisky['Group'][j]:  # if the groups match,\n",
     "                correlation_colors.append(cluster_colors[whisky.Group[i]]) # color them by their mutual group.\n",
     "            else:                                      # otherwise\n",
     "                correlation_colors.append('lightgray') # color them lightgray."
@@ -211,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -221,15 +284,15 @@
     "    data = {\n",
     "        \"x\": np.repeat(distilleries,len(distilleries)),\n",
     "        \"y\": list(distilleries)*len(distilleries),\n",
-    "        \"colors\": ## ENTER CODE HERE! ##,\n",
-    "        \"correlations\": ## ENTER CODE HERE! ##,\n",
+    "        \"colors\": correlation_colors,\n",
+    "        \"correlations\": correlations.flatten(),\n",
     "    }\n",
     ")\n",
     "\n",
     "output_file(\"Whisky Correlations.html\", title=\"Whisky Correlations\")\n",
     "fig = figure(title=\"Whisky Correlations\",\n",
     "    x_axis_location=\"above\", x_range=list(reversed(distilleries)), y_range=distilleries,\n",
-    "    tools=\"hover,box_zoom,reset\")\n",
+    "    tools=\"hover,box_zoom,reset\", width=1200, height=1200)\n",
     "fig.grid.grid_line_color = None\n",
     "fig.axis.axis_line_color = None\n",
     "fig.axis.major_tick_line_color = None\n",
@@ -260,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -310,39 +373,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# edit this to make the function `location_plot`.\n",
+    "def location_plot(title, colors):\n",
+    "    output_file(title+\".html\")\n",
+    "    location_source = ColumnDataSource(\n",
+    "        data = {\n",
+    "            \"x\": whisky[\" Latitude\"],\n",
+    "            \"y\": whisky[\" Longitude\"],\n",
+    "            \"colors\": colors,\n",
+    "            \"regions\": whisky.Region,\n",
+    "            \"distilleries\": whisky.Distillery\n",
+    "        }\n",
+    "    )\n",
     "\n",
-    "output_file(title+\".html\")\n",
-    "location_source = ColumnDataSource(\n",
-    "    data = {\n",
-    "        \"x\": whisky[\" Latitude\"],\n",
-    "        \"y\": whisky[\" Longitude\"],\n",
-    "        \"colors\": colors,\n",
-    "        \"regions\": whisky.Region,\n",
-    "        \"distilleries\": whisky.Distillery\n",
+    "    fig = figure(title = title,\n",
+    "        x_axis_location = \"above\", tools=\"hover, save\")\n",
+    "    fig.plot_width  = 800\n",
+    "    fig.plot_height = 900\n",
+    "    fig.circle(\"x\", \"y\", size=9, source=location_source, color='colors', line_color = None)\n",
+    "    fig.xaxis.major_label_orientation = np.pi / 3\n",
+    "    hover = fig.select(dict(type = HoverTool))\n",
+    "    hover.tooltips = {\n",
+    "        \"Distillery\": \"@distilleries\",\n",
+    "        \"Location\": \"(@x, @y)\"\n",
     "    }\n",
-    ")\n",
+    "    show(fig)\n",
     "\n",
-    "fig = figure(title = title,\n",
-    "    x_axis_location = \"above\", tools=\"hover, save\")\n",
-    "fig.plot_width  = 400\n",
-    "fig.plot_height = 500\n",
-    "fig.circle(\"x\", \"y\", size=9, source=location_source, color='colors', line_color = None)\n",
-    "fig.xaxis.major_label_orientation = np.pi / 3\n",
-    "hover = fig.select(dict(type = HoverTool))\n",
-    "hover.tooltips = {\n",
-    "    \"Distillery\": \"@distilleries\",\n",
-    "    \"Location\": \"(@x, @y)\"\n",
-    "}\n",
-    "show(fig)\n",
-    "\n",
-    "region_cols = ## ENTER CODE HERE! ##\n",
+    "region_cols = [region_colors[r] for r in whisky['Region']]\n",
     "location_plot(\"Whisky Locations and Regions\", region_cols)"
    ]
   },
@@ -362,14 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "region_cols = ## ENTER CODE HERE! ##\n",
-    "classification_cols = ## ENTER CODE HERE! ##\n",
+    "region_cols = [region_colors[r] for r in whisky['Region']]\n",
+    "classification_cols = [cluster_colors[g] for g in whisky.Group]\n",
     "\n",
     "location_plot(\"Whisky Locations and Regions\", region_cols)\n",
     "location_plot(\"Whisky Locations and Groups\", classification_cols)"
